# ecomfulfil-backend

./: .dockerignore  .editorconfig  .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: deploy-prod.yml  main.yml  master.yml  pr.yml
apps/account/: admin.py  authentication.py  backends.py  models.py  serializers.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py  0002_alter_customuser_email.py  0003_customuser_is_email_verified.py
apps/core/: urls.py  views.py
apps/emails/: utils.py
apps/emails/templates/: password_reset_email.html  verification_email.html
config/: middleware.py  urls.py
config/settings/: base.py  dev.py  prod.py
core/: conftest.py
core/accounts/: consumers.py  routing.py  urls.py  views.py
core/accounts/managers/: account.py
core/accounts/migrations/: 0001_initial.py  0002_alter_account_account_number.py
core/accounts/models/: account.py
core/accounts/tests/: test_views.py
core/accounts/views/: account.py
core/authentication/serializers/: login.py
core/authentication/views/: login.py
core/blocks/: apps.py
core/blocks/migrations/: 0001_initial.py
core/blocks/models/: block.py
core/blocks/serializers/: block.py
core/blocks/views/: block.py
core/comments/models/: comment.py
core/comments/serializers/: comment.py
core/comments/views/: comment.py
core/config/: apps.py  models.py  serializers.py  views.py
core/config/migrations/: 0001_initial.py
core/emails/: utils.py
core/general/: authentication.py  balance.py
core/general/utils/: cryptography.py
core/project/: asgi.py  urls.py
core/project/settings/: __init__.py  base.py  docker.py  logging.py  rest_framework.py
core/recipes/: apps.py
core/recipes/models/: recipe.py
core/recipes/serializers/: recipe.py
(+6 files in other folders)
