[tool.poetry]
name = "ecomfulfil-backend"
version = "0.1.0"
description = ""
authors = ["Zubair Sheikh <zubair@xertk.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.9"
django-filter = "^24.2"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.1"
pynacl = "^1.5.0"
pydantic = "^2.8.2"
boto3 = "^1.34.145"
django-cors-headers = "^4.4.0"
django-model-utils = "^4.5.1"
django-storages = "^1.14.4"
djangorestframework-simplejwt = "^5.3.1"
pillow = "^10.4.0"
whitenoise = "^6.7.0"
channels = {extras = ["daphne"], version = "^4.1.0"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
colorlog = "^6.8.2"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
